Adding Code to Toggle Dark and Light Theme and some extra comments

--- a/CSSDemo.html
+++ b/CSSDemo.html
@@ -1,6 +1,7 @@
-<!-- Boilerplate Code - Minimum amount of code required 
- for your Software or Code to run -->
- <!-- CSS Demo -->
+<!-- Boilerplate Code - Minimum amount of code required for your Software or Code to run -->
+ <!-- CSS Styling/Design -->
+ 
+ <!-- No Doctype so browser knows it is a HTML4 Document -->
  <html> 
     <head> 
         <title> Canada Info </title>
