--- a/HTMLDemo.html
+++ b/HTMLDemo.html
@@ -1,8 +1,14 @@
 <!-- 
     HTML - Structure (What will be shown, Components)
-    CSS - Styling (How it will look)
-    JS - Functionality (What action can be performed) 
+    CSS - Styling (How it will look, Design)
+    JS - Functionality (What actions can be performed) 
+
+    Boilerplate Code : Least amount of Code required for your code to run successfully
+
+    Tags with open with a <tagName> and close with a </tagName>
 -->
+
+<!-- No Doctype so browser knows it is a HTML4 Document -->
 
 <html> 
     <head> 
