--- a/JSDemo.html
+++ b/JSDemo.html
@@ -1,4 +1,8 @@
-<!-- JS Demo -->
+<!-- JS Functionality -->
+
+<!-- DocType present so Browser knows it is a HTML5 Document -->
+<!DOCTYPE html>
+
 <html> 
     <head> 
         <title> Display Date and Time </title>
